# NH-testing-engineer-quiz

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
include/: effect.h  player.h
src/: effect.cpp  main.cpp  player.cpp
